# kamping-v2

./: AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md
.github/workflows/: build-cmake.yml
dstl/: CMakeLists.txt
dstl/examples/: CMakeLists.txt  grid_visualization_example.cpp
dstl/include/dstl/: algorithm.hpp  alltoallv.hpp  default_init_allocator.hpp  dstl.hpp  exchange_layout.hpp  factoring.hpp  flat_alltoallv.hpp  grid_alltoallv.hpp  grid_comm.hpp  redistribute.hpp  request_reply.hpp  tags.hpp  thread_multiple_comm.hpp  thread_multiple_helpers.hpp  visualization.hpp  with_subset.hpp
dstl/include/dstl/algorithm/: all_of.hpp  exclusive_scan.hpp  inclusive_scan.hpp  is_sorted.hpp  reduce.hpp  shift.hpp
dstl/include/dstl/detail/: alltoallv_common.hpp  recv_buffer_utils.hpp
dstl/tests/: CMakeLists.txt  alltoallv_test_common.hpp  dstl_is_sorted_test.cpp  dstl_redistribute_test.cpp  dstl_scan_test.cpp  dstl_shift_test.cpp  flat_alltoallv_test.cpp  grid_alltoallv_test.cpp  grid_comm_test.cpp  request_reply_test.cpp  thread_multiple_comm_test.cpp  thread_multiple_test_main.cpp  thread_multiple_test_main.hpp
ecosystem/: CMakeLists.txt  tmp.txt
ecosystem/cereal/: CMakeLists.txt
ecosystem/cereal/examples/: CMakeLists.txt  cereal_send_recv_example.cpp
ecosystem/cereal/include/kamping/ecosystem/: cereal_view.hpp
ecosystem/cereal/tests/: CMakeLists.txt  cereal_view_test.cpp
ecosystem/kokkos/: CMakeLists.txt
ecosystem/kokkos/examples/: CMakeLists.txt  kokkos_alltoallv_example.cpp  kokkos_send_recv_example.cpp
ecosystem/kokkos/include/kamping/ecosystem/: kokkos_view.hpp
ecosystem/kokkos/include/with_comm/kamping/ecosystem/: kokkos_view.hpp
ecosystem/kokkos/include/without_comm/kamping/ecosystem/: kokkos_view.hpp
ecosystem/kokkos/tests/: CMakeLists.txt  kokkos_view_test.cpp
ecosystem/sycl/: CMakeLists.txt
ecosystem/sycl/examples/: CMakeLists.txt  sycl_send_recv_example.cpp
ecosystem/sycl/include/kamping/ecosystem/: sycl_view.hpp
ecosystem/thrust/: CMakeLists.txt
ecosystem/thrust/examples/: CMakeLists.txt  thrust_send_recv_example.cu
ecosystem/thrust/include/kamping/ecosystem/: thrust_buffer_traits.hpp  thrust_device_view.hpp
kamping-v2/: CMakeLists.txt
kamping-v2/examples/: CMakeLists.txt  collectives_example.cpp  send_recv_example.cpp
kamping-v2/include/kamping/v2/: TODO.md  comm.hpp  comm_op.hpp  comm_view_with_pool.hpp  environment.hpp  group.hpp  infer.hpp  iresult.hpp  ops.hpp  request.hpp  result.hpp  sentinels.hpp  session.hpp  status.hpp  type_pool.hpp  views.hpp
kamping-v2/include/kamping/v2/collectives/: allgather.hpp  allgatherv.hpp  allreduce.hpp  alltoall.hpp  alltoallv.hpp  barrier.hpp  bcast.hpp  exscan.hpp  gather.hpp  gatherv.hpp  iallgather.hpp  ialltoallv.hpp  reduce.hpp  scan.hpp  scatter.hpp  scatterv.hpp
kamping-v2/include/kamping/v2/p2p/: constants.hpp  irecv.hpp  isend.hpp  isendrecv.hpp  recv.hpp  send.hpp  send_mode.hpp  sendrecv.hpp
kamping-v2/include/kamping/v2/views/: adaptor.hpp  all.hpp  auto_counts_view.hpp  auto_displs_view.hpp  auto_recv.hpp  auto_recv_v.hpp  concepts.hpp  flatten_v_view.hpp  ref_single_view.hpp  resize_v_view.hpp  resize_view.hpp  view_interface.hpp  with_count_view.hpp  with_counts_view.hpp  with_displs_view.hpp  with_size_view.hpp  with_type_view.hpp
kamping-v2/tests/: CMakeLists.txt  auto_counts_view_test.cpp  flatten_v_view_test.cpp  group_test.cpp  info_test.cpp  materialize_test.cpp  request_view_test.cpp  sentinels_test.cpp  session_test.cpp  v2_allgatherv_test.cpp  v2_allreduce_test.cpp  v2_alltoall_test.cpp  v2_alltoallv_test.cpp  v2_comm_view_with_pool_test.cpp  v2_exscan_test.cpp  v2_gather_test.cpp  v2_gatherv_test.cpp  v2_iallgather_test.cpp  v2_ialltoallv_test.cpp  v2_make_op_test.cpp  v2_recv_test.cpp  v2_reduce_test.cpp  v2_scan_test.cpp  v2_scatter_test.cpp  v2_scatterv_test.cpp  v2_type_pool_test.cpp  view_interface_underlying_test.cpp
mpi-core/: CMakeLists.txt
mpi-core/include/mpi/: buffer.hpp  comm.hpp  environment.hpp  error.hpp  group.hpp  handle.hpp  info.hpp  mpi_span.hpp  ops.hpp  request.hpp  sentinels.hpp  session.hpp  status.hpp  thread_level.hpp
mpi-core/include/mpi/collectives/: allgather.hpp  allgatherv.hpp  allreduce.hpp  alltoall.hpp  alltoallv.hpp  barrier.hpp  bcast.hpp  exscan.hpp  gather.hpp  gatherv.hpp  iallgather.hpp  ialltoallv.hpp  reduce.hpp  scan.hpp  scatter.hpp  scatterv.hpp
mpi-core/include/mpi/p2p/: imrecv.hpp  irecv.hpp  isend.hpp  isendrecv.hpp  mprobe.hpp  mrecv.hpp  probe.hpp  recv.hpp  send.hpp  sendrecv.hpp
